# maki-gripper

./: .gitignore  Dockerfile  README.md  esp32_sim_client.py
Meta-Server/example_app/: CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.txt  local.properties  resource.h  resource.rc
Meta-Server/example_app/app/: build.gradle  local.properties
Meta-Server/example_app/app/libs/x86-64/: haptics_sdk.lib
Meta-Server/example_app/app/src/main/: AndroidManifest.xml
Meta-Server/example_app/app/src/main/cpp/: error.cpp  error.hpp  haptic_command.h  main_android.cpp  main_windows.cpp  network_bridge.cpp  network_bridge.h  program.cpp  program.hpp
Meta-Server/example_app/app/src/main/java/com/meta/haptics_sdk_example/: HttpClient.java  JNIBridge.java
Meta-Server/example_app/app/src/main/res/values/: strings.xml
Meta-Server/haptic_samples/Music/: acoustic_guitar.haptic
Meta-Server/haptic_samples/Nature/: bushes.haptic  water.haptic
Meta-Server/haptic_samples/Objects/: crumple_paper.haptic  gear.haptic
Meta-Server/haptic_samples/Weapons/: sword_scrape.haptic
Meta_server/example_app/: base.apk  local.properties
Meta_server/example_app/app/: local.properties
Meta_server/example_app/app/src/main/cpp/: CMakeLists.txt  network_bridge.cpp  network_bridge.h  program.hpp
Meta_server/haptic_samples/Objects/: clothing.haptic  hatch_close.haptic
docker /meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/example_app/: gradlew  settings.gradle
docker /meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/haptic_samples/Application_UX/: ui_open.haptic
docker /meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/haptic_samples/Footsteps/: concrete.haptic
docker /meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/haptic_samples/Nature/: bushes.haptic  rain.haptic  water.haptic
docker /meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/haptic_samples/Objects/: box_open.haptic  drawer_open.haptic
docker /meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/haptic_samples/Sound_FX/: car_window.haptic
docker /meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/haptic_samples/Weapons/: laser_shoot.haptic
docs/: .$fase0_planteamiento.drawio.bkp  fase0_planteamiento.drawio
esp_server/: Dockerfile  package.json  server.js
esp_server/public/: index.html
haptic/docker/: Dockerfile
haptic/docker/meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/haptic_samples/Application_UX/: ui_error.haptic
haptic/docker/meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/haptic_samples/Footsteps/: grass.haptic
haptic/docker/meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/haptic_samples/Impacts/: metal.haptic  punch.haptic
haptic/meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/example_app/: CMakeCache.txt  CMakeLists.txt  Makefile  build.gradle  cmake_install.cmake
haptic/meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/haptic_samples/Application_UX/: ui_back.haptic
haptic/meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/haptic_samples/Footsteps/: dirt.haptic  snow.haptic
haptic/meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/haptic_samples/Impacts/: kick.haptic
haptic/meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/haptic_samples/Music/: acoustic_guitar.haptic  banjo.haptic
haptic/meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/haptic_samples/Objects/: can_drop.haptic  gear.haptic  hatch_close.haptic  knapsack_open.haptic  servo.haptic
haptic/meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/haptic_samples/Sound_FX/: car_start.haptic
haptic/meta_xr_haptics_native_sdk_openxr_1.0.0-beta.2/haptic_samples/Weapons/: sword_hit.haptic  sword_scrape.haptic
maki-gui/: package-lock.json  package.json
maki-gui/src/: App.js  MainPage.css  MainPage.js
maki-test-bench-scripts/: pyproject.toml
maki-test-bench-scripts/src/maki_test_bench_scripts/: Stepper.py  curvature_ident.py
maki_firmware/: platformio.ini
maki_firmware/include/: maki_controller.hpp
maki_firmware/src/: main.cpp  maki_controller.cpp
maki_firmware/test/: movement_initial.cpp
maki_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.ps1  setup.sh
maki_ws/log/: latest_build
maki_ws/src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
maki_ws/src/log/: latest_build
maki_ws/src/maki_control/: CMakeLists.txt
maki_ws/src/maki_control/launch/: gui_control.launch.py
maki_ws/src/maki_control/src/: esp32_webserver_node.cpp
maki_ws/src/maki_description/: CMakeLists.txt
maki_ws/src/maki_gui/: setup.cfg  setup.py
maki_ws/src/maki_gui/maki_gui/: maki_gui.py
maki_ws/src/maki_test/: setup.cfg  setup.py
maki_ws/src/wrist_gripper_controller/: package.xml  setup.cfg  setup.py
maki_ws/src/wrist_gripper_controller/wrist_gripper_controller/: controller_node.py  gui.py
stats/: .RData  .Rhistory  Tomate.csv  main.r
test-bench/maki_gripper_test_bench/: fp-info-cache  maki_gripper_test_bench.kicad_prl  maki_gripper_test_bench.kicad_pro  maki_gripper_test_bench.kicad_sch
test-bench/maki_gripper_test_bench/PIC16F1827-I_SS/: PIC16F1827-I_SS.kicad_sym  SOP65P780X200-20N.kicad_mod
test-bench/stepper-code/: pyproject.toml
(+61 files in other folders)
