[project]
name = "stepper-code"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrés Morales",email = "amoralesma@unal.edu.co"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "stepper_code", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
